Fix proejct-announcement alignment

--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,7 @@ h3 {
     grid-template-rows: 1fr 1fr 1fr;
     gap: 30px;
     padding: 30px;
+    padding-top: 0px;
 }
 .project{
     background-color: white;
@@ -184,7 +185,8 @@ h3 {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 4fr 1fr 4fr;
-    margin: 30px;
+    margin-left: 30px;
+    
 }
 #listAnnounce{
     grid-column: 1 / 2;
@@ -219,6 +221,8 @@ hr{
     display: grid;
     grid-template-columns: 1fr 3 fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    padding: 20px;
+    padding-left: 50px;
 }
 .trending{
     padding: 15px;
